@@ -1,9 +1,9 @@
-AC_INIT([miau], [0.6.3-p])
+AC_INIT([miau], [0.6.3])
 AC_CONFIG_SRCDIR([src/miau.c])
 AC_CONFIG_HEADER([config.h])
 AM_INIT_AUTOMAKE([dist-bzip2])
 AH_TEMPLATE([VERSIONNAME], [long version name])
-AC_DEFINE([VERSIONNAME], ["All the trouble and twice the bugs"])
+AC_DEFINE([VERSIONNAME], ["Minor changes"])
 
 
 # option, explanation, define
